2007-01-09  Graham Cobb <g+gpe@cobb.uk.net>

	* Increment version to 0.31 so gpesyncd can depend on new 
	event_calendar_get_event_db function

2006-12-29  Neal H. Walfield  <neal@gnu.org>

	* gpe/event-db.h (event_calendar_list_events_modified_between):
	New prototype.
	* event-db.h (event_calendar_list_events_t): Take two additional
	arguments, modified_after and modified_before.  Update callers.
	* sqlite.c (do_event_calendar_list_events): Take two additional
	arguments, modified_after and modified_before.  Implement
	semantics.
	* event-cal.c (event_calendar_list_events_modified_between): New
	function.

2006-12-28  Neal H. Walfield  <neal@gnu.org>

	* gpe/event-db.h (event_calendar_get_event_db): New prototype.
	* event-cal.c (event_calendar_get_event_db): New function.

2006-12-28  Neal H. Walfield  <neal@gnu.org>

	* event-db.c: Include <string.h>.

2006-12-28  Neal H. Walfield  <neal@gnu.org>

	* po: New directory.
	* autogen.sh: Just use autoreconf and intltoolize.

2006-12-21  Neal H. Walfield  <neal@gnu.org>

	* event.c (event_flush): Jump to the error handling if an error
	occured.

2006-12-14  Joe McCarthy <mccarthy@granular.che.pitt.edu>

	* event-db.c (buzzer): Change EVENT_DB_CLASS to EVENT_DB_GET_CLASS to
	fix crashing with unacknowledged alarms.
			
2006-08-28  Neal H. Walfield  <neal@gnu.org>

	* sqlite.c (event_load_callback): Correctly copy the day of the
	week specification.
	Reported by Joseph J. McCarthy <mccarthy@engrng.pitt.edu>.

2006-08-28  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (check_PROGRAMS): Add test-recur-weekly-2.
	(TESTS): Likewise.
	(test_recur_weekly_2_SOURCES): New.
	(test_recur_weekly_2_LDADD): Likewise.
	* test-recur-weekly-2.c: New file.
	* test-recur-weekly-2.expected: Likewise.

2006-08-08  Neal H. Walfield  <neal@gnu.org>

	* sqlite.c: New file.
	* Makefile.am (libeventdb_la_SOURCES): Add sqlite.c.
	* event-db.h: Don't include <sqlite.h>.  Include "event-cal.h" and
	"event.h".