@@ -1,7 +1,14 @@
-2007-01-09  Graham Cobb <g+gpe@cobb.uk.net>
+2007-02-12  Neal H. Walfield  <neal@gnu.org>
 
-	* Increment version to 0.31 so gpesyncd can depend on new 
-	event_calendar_get_event_db function
+	* sqlite.c [USE_SQLITE3]: Map sqlite2 functions to their sqlite3
+	counterparts.
+	(event_db_new) [USE_SQLITE3]: Add stubs to detect if DB is in
+	sqlite2 format.
+
+2007-01-09  Graham Cobb  <g+gpe@cobb.uk.net>
+
+	* configure.ac: Increment version to 0.31 so gpesyncd can depend
+	on new event_calendar_get_event_db function.
 
 2006-12-29  Neal H. Walfield  <neal@gnu.org>
 
